--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>DSA-Practice_javascript questions</h1>
 
 </body>
 <script src="basic.js"></script>
